# neurobaj

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle  micronaut-cli.yml  settings.gradle
.github/workflows/: build.yml  ci.yml
migrations/2023-02-27-154209_creation/: down.sql  up.sql
src/: chains.rs  main.rs  models.rs  routes.rs  schema.rs
src/main/java/kz/ilotterytea/neurobaj/: Bot.java  Main.java  Neurobaj.java  SharedConstants.java
src/main/java/kz/ilotterytea/neurobaj/neural/markov/: Chain.java  ChainAuthor.java  ChatChain.java  MarkovChainHandler.java
src/main/java/kz/ilotterytea/neurobaj/storage/: PropertiesLoader.java
src/main/java/kz/ilotterytea/neurobaj/twitch/: MessageHandler.java
src/main/java/kz/ilotterytea/neurobaj/utils/: StringUtils.java
src/main/java/kz/ilotterytea/neurobaj/web/controllers/api/v1/: GeneralAPIController.java  MarkovAPIController.java
src/main/resources/: application.yml
