[package]
name = "neurobaj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
once_cell = "1.17.1"
rocket = "0.4.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
twitch-irc = "5.0.0"
