[package]
name = "neurobaj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite"] }
dotenv = "0.15.0"
once_cell = "1.17.1"
reqwest = "0.11.14"
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-js-set-interval = "1.2.0"
toml = "0.7.2"
twitch-irc = "5.0.0"
twitch_api = { version = "0.7.0-rc.4", features = ["twitch_oauth2", "helix", "reqwest"] }
twitch_oauth2 = "0.11.1"
